
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "freight"
description = "Freight package manager."
version = "0.1.0"
requires-python = ">=3.12"

authors = [
    { name = "the-citto" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Topic :: System :: Software Distribution",
]

dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
# Homepage = "https://github.com/the-citto/freight"
# Documentation = "https://github.com/the-citto/freight"
Repository = "https://github.com/the-citto/freight"

[project.scripts]
freight = "freight:__main__.main"



[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.package-data]
freight = ["py.typed"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.tests = { file = ["requirements-tests.txt"]}
optional-dependencies.dev = { file = ["requirements-dev.txt"]}

[tool.setuptools.packages.find]
where = ["python"]


[tool.pytest.ini_options]
addopts = "--strict-markers --no-header --tb=no --cov --cov-report term-missing"
testpaths = ["tests"]


[tool.coverage.run]
omit = ["python/tests/*"]


[tool.mypy]
strict = true
python_executable = ".venv/bin/python"
exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "_old",
    "_tmp",
]


[tool.pyright]
venvPath = "."
venv = ".venv"

enableReachabilityAnalysis = false

include = [
    "python",
    "tests",
]
exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "_old",
    "_tmp",
]


[tool.ruff]
exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "_old",
    "_tmp",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "D203", # `one-blank-line-before-class`
    "D212", # `multi-line-summary-first-line`
    "ERA001", # Found commented-out code
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "D102", # Missing docstring in public method
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "PLR2004", # Magic value used in comparison
    "S101",  # Use of `assert` detected
]

[tool.ruff.lint.isort]
known-first-party = ["freight"]
lines-after-imports = 3


